--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -29,3 +29,7 @@
 ::-webkit-scrollbar-track {
   background-color: rgb(56, 56, 56);
 }
+
+audio::-webkit-media-controls-panel {
+  background-color: #a68bca;
+}
